examples/test/testpolicy5305.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5305
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key27: value34
      key26: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value21
          key20: value6
      podSelector:
        matchLabels:
          key3: value29
